force-app/main/default/objects/Survey_Help_Text__c/Survey_Help_Text__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Case - NPS</label>
</CustomObject>