force-app/main/default/objects/Survey_Help_Text__c/fields/Agree_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Agree_Help_Text__c</fullName>
    <label>Agree Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>