force-app/main/default/objects/Survey_Help_Text__c/fields/Poor_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Poor_Help_Text__c</fullName>
    <label>Poor Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>