force-app/main/default/objects/Survey_Help_Text__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <label>Question 10</label>
    <type>TextArea</type>
</CustomField>