force-app/main/default/objects/Survey_Help_Text__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <label>Question 11</label>
    <type>TextArea</type>
</CustomField>