force-app/main/default/objects/Survey_Help_Text__c/fields/Question_9a__c.field-meta.xml
<CustomField>
    <fullName>Question_9a__c</fullName>
    <label>Question 9a</label>
    <type>TextArea</type>
</CustomField>