force-app/main/default/objects/Survey_Help_Text__c/fields/Question_9b__c.field-meta.xml
<CustomField>
    <fullName>Question_9b__c</fullName>
    <label>Question 9b</label>
    <type>TextArea</type>
</CustomField>